tests/ui/proc-macro/pretty-print-hack/allsorts-rental-0.5.6/src/lib.rs
//@ ignore-test (auxiliary, used by other tests)

#[derive(Print)]
enum ProceduralMasqueradeDummyType {
//~^ ERROR using
//~| WARN this was previously
//~| ERROR using
//~| WARN this was previously
//~| ERROR using
//~| WARN this was previously
//~| ERROR using
//~| WARN this was previously
    Input
}
